# prism-agent

./: .gitignore  .tmp_patch_attachment.py  .tmp_patch_attachment2.py  CHANGELOG.md  Dockerfile  INSTALL.md  INSTALL_FEISHU.md  LICENSE  PRISM_飞书使用文档.md  README.md  VIDEO_TUTORIAL.md  config.example.yaml  pyproject.toml  pytest.ini  test_basic.py  test_browser_direct.py
.github/workflows/: ci.yml
build-windows/PRISM-Agent/: Analysis-00.toc  EXE-00.toc  PKG-00.toc  PYZ-00.toc  warn-PRISM-Agent.txt
prism/: __init__.py  __main__.py  _version.py  ab_lab.py  agent.py  agent_network.py  api_client_generator.py  api_key_rotator.py  api_proxy_router.py  api_server.py  async_compat.py  audit_log.py  auto_rollback.py  auto_summarizer.py  auto_tagger.py  auto_test_generator.py  auto_translator.py  batch.py  batch_skill_ops.py  benchmark.py  branches.py  cache.py  chaos_testing.py  checkpoint.py  cli.py  code_diff_highlighter.py  code_formatter.py  code_migration.py  code_review.py  code_review_scorer.py  code_search.py  collab.py  collab_editor.py  completion_contracts.py  conditions.py  config.py  config_backup.py  config_drift.py  config_encryption.py  config_schema.py  (+138 more)
prism-desktop/: README.md  bring_front.ps1  launch_with_log.bat  patch_86.py  pyproject.toml  run_prism.sh  启动PRISM桌面端.bat
prism-desktop/prism_desktop/: __init__.py  browser.py  chat.py  i18n.py  main.py  mcp.py  settings.py  sidebar.py  system.py  terminal.py
prism-desktop/tests/: test_desktop.py
prism/acp/: __init__.py  client.py
prism/cli/: __init__.py  api_server.py  batch.py  browser.py  commands.py  conditions.py  config_cmds.py  gateway.py  marketplace.py  mcp.py  memory.py  plugin.py  rag.py  session.py  setup_cmds.py  skill.py  theme.py  workspace.py
prism/gateway/: __init__.py  base.py  discord.py  feishu.py  telegram.py  wechat.py
prism/mcp/: __init__.py  config_loader.py  http_client.py  protocol.py  server_stdio.py  sse_client.py
prism/multimodal/: __init__.py
prism/providers/: __init__.py  fallback.py  manager.py  pool.py
prism/sdk/: __init__.py
prism/skills/: __init__.py  chapter_delivery.py  learn.py
prism/skills/builtin/: file_operations.py  terminal_execution.py
prism/tools/: __init__.py  browser.py  browser_bridge.py  browser_echo.py  code_executor.py  freshness.py  gateway_manage.py  multimodal_tools.py  registry.py
prism_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scripts/: build-linux.sh  build-macos-flet.sh  build-macos.sh  build-windows-pyinstaller.cmd  build-windows.cmd  build-windows.ps1  check_version.py  com.prism.gateway.plist  install.ps1  install.sh  prism-gateway.service  release.ps1  release.sh  run_feishu_gateway.py  verify_e2e.py
tests/: conftest.py  mcp_test_server.py  test_acp.py  test_agent_mcp.py  test_browser.py  test_browser_minimal.py  test_browser_minimal_legacy2.py  test_cli.py  test_cli_mcp.py  test_cli_memory.py  test_code_executor.py  test_desktop_tray.py  test_e2e_chat.py  test_freshness.py  test_full_smoke.py  test_gateway.py  test_gateway_manager.py  test_gateway_receiver.py  test_integration.py  test_integration_config.py  test_integration_providers.py  test_mcp_client.py  test_mcp_config_loader.py  test_mcp_config_validation.py  test_mcp_connect.py  test_mcp_http.py  test_mcp_protocol.py  test_mcp_server.py  test_memory.py  test_memory_providers.py  test_multimodal.py  test_orchestrator.py  test_providers.py  test_rag.py  test_real_model.py  test_sandbox.py  test_session.py  test_session_cli.py  test_skills.py  test_task_feedback.py  (+4 more)
