[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prism-agent"
version = "0.1.0"
description = "统一 AI Agent CLI：整合 Hermes/Codex/OpenClaw 能力"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "rich>=13.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "openai>=1.0",
    "httpx>=0.27",
    "click>=8.1",
    "prompt-toolkit>=3.0",
]

[project.scripts]
prism = "prism.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["prism*"]
