[project]
name = "prism-agent"
version = "0.2.3"
description = "统一 AI Agent CLI：整合 Hermes/Codex/OpenClaw 能力"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.11"
authors = [
    {name = "PRISM Agent", email = "prism@example.com"},
]
keywords = ["ai", "agent", "cli", "llm", "openai", "playwright", "mcp", "gateway"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
]
dependencies = [
    "rich>=13.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "openai>=1.0",
    "httpx>=0.27",
    "click>=8.1",
    "prompt-toolkit>=3.0",
]

[project.optional-dependencies]
browser = [
    "playwright>=1.60.0",
    "nest-asyncio>=1.6.0",
]
desktop = [
    "flet>=0.24.0",
]
dev = [
    "pytest>=9.1.1",
    "playwright>=1.60.0",
    "nest-asyncio>=1.6.0",
]
all = [
    "prism-agent[browser,desktop]",
]

[project.urls]
Homepage = "https://github.com/jz616059669/prism-agent"
Documentation = "https://github.com/jz616059669/prism-agent#readme"
Repository = "https://github.com/jz616059669/prism-agent.git"
Issues = "https://github.com/jz616059669/prism-agent/issues"
Changelog = "https://github.com/jz616059669/prism-agent/blob/master/CHANGELOG.md"

[project.scripts]
prism = "prism.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["prism*", "prism-desktop*"]

[tool.setuptools.package-data]
"prism" = ["py.typed"]

[dependency-groups]
dev = [
    "flet>=0.85.3",
    "pyinstaller>=6.21.0",
    "pytest>=9.1.1",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
