[project]
name = "prism-desktop"
version = "0.1.0"
description = "PRISM Agent Desktop Client"
requires-python = ">=3.11"
dependencies = [
    "flet>=0.24.0",
    "markdown>=3.5",
]

[project.optional-dependencies]
dev = [
    "flet[all]>=0.24.0",
]
desktop = [
    "flet>=0.24.0",
]

[project.scripts]
prism-desktop = "prism_desktop.main:main"

[dependency-groups]
dev = [
    "flet-desktop>=0.85.3",
    "pyinstaller>=6.21.0",
]
